--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
                 </div>
                 <div class="what">
                 <p class="question">What is Do-Soft about?</p>
-                <p>Tablespoon Please.<br>Have you even read the description?<br>It reads "An open-source OS." Get it? 😰</p>
+                <p>Tablespoon Please.<br>Have you even read the description?<br>It reads "An OS with expectations." Get it? 😰</p>
                 </div>
                 <div class="what">
-                <p class="question">Can i collaborate this freaking website?</p>
+                <p class="question">Can i collaborate this freaking website and <i>Do-Soft</Do-Soft></i>?</p>
                 <p>Well, you sure can; you must have knowledge of C, Computers, and C comments 😅</p>
                 </div>
             </div>
